Update project with suggestion

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <section>
       <div class="container">
-        <img alt="Product image" src="images/image-product-desktop.jpg" />
+        <img alt="Product image" alt="Image perfume" src="images/image-product-desktop.jpg" />
         <div class="content">
           <h2>PERFUME</h2>
 
@@ -38,7 +38,7 @@
           </div>
 
             <div class="addCart">
-              <button><img id="btn" src="/images/icon-cart.svg">Add to Cart</button>
+              <button><img id="btn" alt="Icon Cart" src="./images/icon-cart.svg">Add to Cart</button>
             </div>
 
           <!--<footer class="attribution">
